# build-a-large-language-model-from-scratch

./: .gitignore  Makefile  README.md  pyproject.toml
data/: get_the_verdict_file.py  the-verdict.txt
src/: data_loader.py  main.py  simple_tokenizer.py
tests/: data_loader_test.py  main_test.py  simple_tokenizer_test.py  tiktoken_test.py
