[project]
name = "build-a-large-language-model-from-scratch"
version = "0.42.0"
description = "This repository is based on the material from the book Build a Large Language Model (From Scratch)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
