[project]
name = "build-a-large-language-model-from-scratch"
version = "0.42.0"
description = "This repository is based on the material from the book Build a Large Language Model (From Scratch)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tiktoken==0.7.0",
    "torch>=2.5.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.8.4",
]
